# PhyFormula

./: CMakeLists.txt  README.md  details.md
inc/formula/: formula.h  version.h
inc/slip_system/: slip_system.h  version.h
src/: CMakeLists.txt  formula.cpp  slip_system.cpp  version.h.in
test_benchmark/: CMakeLists.txt
test_googletest/: CMakeLists.txt  test.cpp  test_formula.cpp  test_slip_system.cpp
